...
                                                        <rect key="frame" x="0.0" y="3" width="382" height="48"/>
                                                        <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="20"/>
                                                        <state key="normal" title="Member">
                                                            <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                        </state>
...
                                                        <rect key="frame" x="0.0" y="3" width="382" height="48"/>
                                                        <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="20"/>
                                                        <state key="normal" title="Guest">
                                                            <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                        </state>
...
                                                        <rect key="frame" x="0.0" y="0.0" width="382" height="50"/>
                                                        <subviews>
                                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="User Name" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="kiF-I3-Skb">
                                                                <rect key="frame" x="0.0" y="0.0" width="382" height="50"/>
                                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
...
                                                        <rect key="frame" x="0.0" y="66" width="382" height="50"/>
                                                        <subviews>
                                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="QcX-Kz-cz8">
                                                                <rect key="frame" x="0.0" y="0.0" width="382" height="50"/>
                                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
...
                                                                <rect key="frame" x="0.0" y="3" width="382" height="48"/>
                                                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="20"/>
                                                                <state key="normal" title="Submit">
                                                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                                </state>
...
                                                <rect key="frame" x="0.0" y="3" width="382" height="48"/>
                                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="20"/>
                                                <state key="normal" title="Create New Employee">
                                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                </state>
...
