...
        createOrEditButton.applyGradient(colours: UIColor.gradientColors, locations: [0.5 , 1.0])
        createOrEditButton.cornerRadius(with: 8)
        delegate?.viewDidLoad()
    }
    
    private func populateDataForEditMode() {
        title = "Edit Details"
        createOrEditButton.setTitle("Edit", for: .normal)
        firstNameTextField.text = employee?.firstName
        lastNameTextField.text = employee?.lastName
        emailTextField.text = employee?.email
    }
    
...
