...
        viewSetupDone = true
        // Do any additional setup after loading the view.
    }
    
    
    private func uiSet() {
        title = "Home"
        createNewEmployeeButton.applyGradient(colours: UIColor.gradientColors, locations: [0.5 , 1.0])
        createNewEmployeeButton.cornerRadius(with: 8)
        if userType == UserType.member {
            setRightBarButtons(with: [])
        }
        
...
